Complete working version of the SyntaxHighlighter
git-svn-id: https://dnnwidgets.svn.codeplex.com/svn@62920 81fbe566-5dc4-48c1-bdea-7421811ca204

--- a/trunk/js/SyntaxHighlighter/styles/shThemeDefault.css
+++ b/trunk/js/SyntaxHighlighter/styles/shThemeDefault.css
@@ -16,6 +16,8 @@
  */
 .syntaxhighlighter {
   background-color: white !important;
+  height:auto !important;
+  width:90%;
 }
 .syntaxhighlighter .line.alt1 {
   background-color: white !important;
